add image IO logic